# GeometricConstraintSolver

./: .gitignore  CMakeLists.txt  main.cpp  types.h
constraints/: c2l_distance_constraint.cpp  c2l_distance_constraint.h  c2p_distance_constraint.cpp  c2p_distance_constraint.h  constraint.h  distance_constraint.cpp  distance_constraint.h  geometric_object.h  horizontal_constraint.cpp  horizontal_constraint.h  l2l_distance_constraint.cpp  l2l_distance_constraint.h  l2l_parallel_constraint.cpp  l2l_parallel_constraint.h  l2l_perpendicular_constraint.cpp  l2l_perpendicular_constraint.h  p2l_distance_constraint.cpp  p2l_distance_constraint.h  p2p_distance_constraint.cpp  p2p_distance_constraint.h  p2p_horizontal_constraint.cpp  p2p_horizontal_constraint.h  p2p_vertical_constraint.cpp  p2p_vertical_constraint.h  parallel_constraint.cpp  parallel_constraint.h  vertical_constraint.cpp  vertical_constraint.h
objects/: circle.cpp  circle.h  ellipse.cpp  ellipse.h  ellipsoid.cpp  ellipsoid.h  geometric_object.h  line.cpp  line.h  plane.cpp  plane.h  point.cpp  point.h  solid_body.cpp  solid_body.h  sphere.cpp  sphere.h
solvers/: array_solver.cpp  array_solver.h  graph_solver.cpp  graph_solver.h  solver.h
